# QR-code

./: ALG.cpp  CMakeLists.txt  Json_find.txt  add.cpp  add.h  basic_geometry.cpp  basic_geometry.h  basicfun.cpp  basicfun.h  boundary_point.cpp  boundary_point.h  ccl_algorithm.cpp  ccl_algorithm.h  compressive_img_candidate_for_barcode.cpp  compressive_img_candidate_for_barcode.h  convert_in_monochrome.cpp  convert_in_monochrome.h  convert_rgb_in_monochrome.cpp  convert_rgb_in_monochrome.h  convex_hull.cpp  convex_hull.h  create_img_marker.cpp  create_img_marker.h  finding_corner_points.cpp  finding_corner_points.h  framing_window.cpp  framing_window.h  gradient.cpp  gradient.h  gradient_and_framing_window.cpp  gradient_and_framing_window.h  hog_basic_instrument.cpp  hog_basic_instrument.h  input_parameters_output_barcode_ang.cpp  input_parameters_output_barcode_ang.h  main.cpp  makeWhite_outside_rect.cpp  makeWhite_outside_rect.h  make_img_from_gradient.cpp  make_img_from_gradient.h  (+21 more)
